@@ -21,6 +21,7 @@ from Transport import Transport as Base, \
                       unix_user_re,      \
                       pass_re,           \
                       skey_re,           \
+                      huawei_re,         \
                       login_fail_re
 
 True  = 1
@@ -57,6 +58,7 @@ class Transport(Base):
                        unix_user_re,
                        skey_re,
                        pass_re,
+                       huawei_re,
                        self.prompt_re]
             #print 'Waiting for prompt:', self.conn.buffer, self.conn.before, self.conn.after
             try:
@@ -80,7 +82,8 @@ class Transport(Base):
             # User name prompt.
             elif which <= 3:
                 #print "Username prompt received."
-                self.host_type = ('cisco', 'junos', 'unix')[which - 1]
+                if self.host_type == 'unknown':
+                    self.host_type = ('cisco', 'junos', 'unix')[which - 1]
                 self.send(user + '\r')
                 continue
 
@@ -105,8 +108,12 @@ class Transport(Base):
                 self.send(password + '\r')
                 continue
 
-            # Shell prompt.
+            # Huawei welcome message.
             elif which == 6:
+                self.host_type = 'huawei'
+
+            # Shell prompt.
+            elif which == 7:
                 #print "Shell prompt received."
                 # Switch to script compatible output (where supported).
                 #print 'Host type:', self.host_type
