@@ -19,9 +19,9 @@ flags         = re.I | re.M
 printable     = re.escape(string.printable)
 ignore        = r'[\x1b\x07]'
 newline       = r'[\r\n]'
-prompt_start  = r'(?:' + newline + r'[^' + printable + r']?|' + ignore + '+)'
+prompt_start  = r'.*(?:' + newline + r'[^' + printable + r']?|' + ignore + '+)'
 prompt_chars  = r'[\-\w\(\)@:~]'
-filename      = r'(?:[\w+\-\._]+)'
+filename      = r'(?:[\w\+\-\._]+)'
 path          = r'(?:(?:' + filename + r')?(?:/' + filename + r')*/?)'
 any_path      = r'(?:' + path + r'|~' + path + r'?)'
 host          = r'(?:[\w+\-\.]+)'
@@ -33,14 +33,17 @@ prompt_re     = re.compile(prompt_start                 \
                          + user_host + r'?'             \
                          + r'[: ]?'                     \
                          + any_path + r'?'              \
+                         + r'[: ]?'                     \
+                         + any_path + r'?'              \
                          + r'(?:\(' + filename + '\))?' \
                          + r'\]?'                       \
                          + r'[#>%\$] ?$', flags)
 
-cisco_user_re = re.compile(newline + r'username:', flags)
-junos_user_re = re.compile(newline + r'login:',    flags)
-unix_user_re  = re.compile(r'(user|login): ?$',    flags)
-pass_re       = re.compile(r'password:?',          flags)
+huawei_re     = re.compile(r'huawei',                    flags)
+cisco_user_re = re.compile(newline + r'user ?name:\s*$', flags)
+junos_user_re = re.compile(newline + r'login:\s*?$',     flags)
+unix_user_re  = re.compile(r'(user|login):\s*$',         flags)
+pass_re       = re.compile(r'password:?\s*$',            flags)
 skey_re       = re.compile(r'(?:s\/key|otp-md4) (\d+) (\S+)')
 error_re      = re.compile(r'^%? ?(?:error|invalid|incomplete)', re.I)
 login_fail_re = re.compile(newline + r'[^\r\n]*(?:incorrect|failed|denied)', flags)
@@ -57,6 +60,7 @@ prompts = [r'[sam123@home ~]$',
            r'0123456-1-1-a>',
            r'MyHost-A1(config)#',
            r'MyHost-A1(config)>',
+           r'RP/0/RP0/CPU0:A-BC2#',
            r'FA/0/1/2/3>',
            r'FA/0/1/2/3(config)>',
            r'FA/0/1/2/3(config)#',
